# valvet-trading-triggers

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  README_WEBHOOK.md  pyproject.toml  requirements.txt  run_daily.sh  run_with_webhook.sh  test_webhook.py
config/: .env.example
docs/: KNOWN_ISSUES.md  MCP_SERVER.md  PROJECT_PLAN.md  avanza-fallback.md  design.md  mcp-server-setup.md  multi-eu-avanza-fallback-design.md  requirements.md  signal-strength.md  tech-spec-summary.md  tech-spec.md  yahoo-ticker-mapping.md
reports/: backtest_report_2026-05-23.md
src/: api_server.py  backtest.py  data_fetcher.py  mcp_server.py  migrate_add_unique_constraint.py  poc_trigger_system.py  resilience.py  sector_analysis.py  signal_generator.py  trigger_system_v1.py
src/static/: chat.html
tests/: mcp_test_client.py  test_backtest.py  test_data_fetcher.py  test_mcp_server.py  test_resilience.py  test_sector_analysis.py  test_signal_generator.py  test_trigger_system_retry.py  test_trigger_system_signals.py
