[project]
name = "valvet-trading-triggers"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
]
ignore = [
    "N818",  # exception suffix (CircuitBreakerOpen is fine)
]

[tool.ruff.lint.isort]
known-first-party = ["trigger_system_v1", "backtest", "resilience", "signal_generator", "data_fetcher", "sector_analysis", "api_server", "mcp_server"]
